[package]
name = "panic-safe"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
authors = ["David Li <davidli2010@foxmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "A library for catching panic."
keywords = ["panic", "catch", "safe"]
repository = "https://github.com/davidli2010/panic-safe.git"
homepage = "https://github.com/davidli2010/panic-safe"
documentation = "https://docs.rs/panic-safe/"
